--- a/src/framework/FrameworkInclude.html
+++ b/src/framework/FrameworkInclude.html
@@ -1,12 +1,23 @@
 
-<script src="src/Map.js"></script>
 <script src="src/Exceptions.js"></script>
-<script src="src/Application.js"></script>
-<script src="src/Game.js"></script>
-<script src="src/Screen.js"></script>
-<script src="src/MouseManager.js"></script>
-<script src="src/KeyboardManager.js"></script>
+
+<script src="src/util/FileUtil.js"></script>
+<script src="src/util/DataTypeUtil.js"></script>
+
+<script src="src/window/Application.js"></script>
+<script src="src/window/Game.js"></script>
+<script src="src/window/Screen.js"></script>
+<script src="src/window/MouseManager.js"></script>
+<script src="src/window/KeyboardManager.js"></script>
+
+<script src="src/graphics/buffers/IBO.js"></script>
+<script src="src/graphics/buffers/VBO.js"></script>
+<script src="src/graphics/geometry/Geometry.js"></script>
+<script src="src/graphics/geometry/GeometryBuilder.js"></script>
+<script src="src/graphics/geometry/Mesh.js"></script>
+<script src="src/graphics/geometry/MeshFamily.js"></script>
 <script src="src/graphics/ShaderProgram.js"></script>
 <script src="src/graphics/RenderMesh.js"></script>
 <script src="src/graphics/Camera.js"></script>
+
 <script src="src/collision/CollisionSphere.js"></script>
