--- a/index.html
+++ b/index.html
@@ -11,75 +11,9 @@
         Your browser doesn't appear to support the
         <code>&lt;canvas&gt;</code> element.
     </canvas>
-    <input id="numberOfTeapots" type=range min=0 max=1000 value=1 >
-    <input id="teapotResolution" type=range min=0 max=4 value=1 >
-    <button onclick="toggleShader()">Toggle Shader</button>
+    <input id="numberOfTeapots" type=range min=0 max=10000 value=1>
+    <input id="teapotResolution" type=range min=0 max=4 value=1>
 </div>
-
-<script id="shader-fs" type="x-shader/x-fragment">
-  precision mediump float;
-  varying vec4 pass_color;
-  varying vec3 pass_normal;
-  varying vec3 pass_lightDirection;
-  void main(void) {
-    	float lambertCoef = max(dot(pass_normal, pass_lightDirection), 0.0);
-
-    vec3 diffuse      = vec3(0.7, 0.7, 0.7);
-    vec3 ambientColor = vec3(0.6, 0.6, 0.6);
-
-    vec3 lightWeighting = ambientColor + diffuse * lambertCoef;
-
-    vec3 color = pass_color.xyz * lightWeighting;
-
-    gl_FragColor = vec4(color, 1.0);
-  }
-</script>
-
-<script id="shader-vs" type="x-shader/x-vertex">
-  attribute vec3 aVertexPosition;
-  attribute vec3 aVertexNormal;
-
-  uniform mat4 uModelMatrix;
-  uniform mat4 uViewMatrix;
-  uniform mat4 uProjectionMatrix;
-
-  varying vec4 pass_color;
-varying vec3 pass_normal;
-varying vec3 pass_lightDirection;
-
-
-  void main(void) {
-    vec3 normal = aVertexNormal;
-    gl_Position = uProjectionMatrix * uViewMatrix * uModelMatrix * vec4(aVertexPosition, 1.0);
-   pass_lightDirection = vec3(1, 0, 0);
-   pass_color = vec4(0.3, 0.8, 0.2, 1.0);
-
-	pass_normal = aVertexNormal;
-  }
-</script>
-
-<script id="shader-vs-2" type="x-shader/x-vertex">
-  attribute vec3 aVertexPosition;
-  attribute vec3 aVertexNormal;
-
-  uniform mat4 uModelMatrix;
-  uniform mat4 uViewMatrix;
-  uniform mat4 uProjectionMatrix;
-
-  varying vec4 pass_color;
-varying vec3 pass_normal;
-varying vec3 pass_lightDirection;
-
-
-  void main(void) {
-    vec3 normal = aVertexNormal;
-    gl_Position = uProjectionMatrix * uViewMatrix * uModelMatrix * vec4(aVertexPosition, 1.0);
-   pass_lightDirection = vec3(1, 0, 0);
-   pass_color = vec4(0.8, 0.5, 0.2, 1.0);
-
-	pass_normal = aVertexNormal;
-  }
-</script>
 
 <div id="includedContent"></div>
 
@@ -89,21 +23,16 @@ varying vec3 pass_lightDirection;
 
 <link rel="import" href="libs/obj-loader/obj-loaderInclude.html">
 
+<link rel="import" href="libs/statsjs/StatsInclude.html">
+
 <link rel="import" href="src/framework/FrameworkInclude.html">
 
 <link rel="import" href="src/game/GameInclude.html">
 
 <script>
-    window.currentShader = 0;
-    function toggleShader() {
-        if(window.currentShader == 1) {
-            window.currentShader = 0;
-        }
-        else {
-            window.currentShader = 1;
-        }
-    }
-    $(function( ) {
+
+    $(function ()
+    {
 
         /* Mouse Events */
         $('#glcanvas')
@@ -111,20 +40,23 @@ varying vec3 pass_lightDirection;
                 .mouseup(MouseManager.onMouseUp)
                 .mousemove(MouseManager.onMouseMove);
         /* Temporary touch events for demo */
-        $('#glcanvas').on('touchstart', function (e) {
+        $('#glcanvas').on('touchstart', function (e)
+        {
             e.button = MouseManager.LEFT_STD_BUTTON;
             e.screenX = e.originalEvent.touches[0].screenX;
             e.screenY = e.originalEvent.touches[0].screenY;
             e.preventDefault();
             MouseManager.onMouseDown(e);
         });
-        $('#glcanvas').on('touchmove', function (e) {
+        $('#glcanvas').on('touchmove', function (e)
+        {
             e.screenX = e.originalEvent.touches[0].screenX;
             e.screenY = e.originalEvent.touches[0].screenY;
             e.preventDefault();
             MouseManager.onMouseMove(e);
         });
-        $('#glcanvas').on('touchend', function (e) {
+        $('#glcanvas').on('touchend', function (e)
+        {
             e.button = MouseManager.LEFT_STD_BUTTON;
             e.screenX = 400;//garbage
             e.screenY = 400;//garbage
@@ -132,33 +64,24 @@ varying vec3 pass_lightDirection;
             MouseManager.onMouseUp(e);
         });
 
-        document.addEventListener('keydown', function(event) {
+        document.addEventListener('keydown', function (event)
+        {
             KeyboardManager.onKeyDown(event);
         });
 
-        document.addEventListener('keyup', function(event) {
+        document.addEventListener('keyup', function (event)
+        {
             KeyboardManager.onKeyUp(event);
         });
     });
 
-    function start() {
-
-        OBJ.downloadMeshes({
-            'cubeObj': 'res/models/cube.obj',
-            'teapot1': 'res/models/MeshRes1.obj',
-            'teapot2': 'res/models/MeshRes2.obj',
-            'teapot3': 'res/models/MeshRes3.obj',
-            'teapot4': 'res/models/MeshRes4.obj',
-            'teapot5': 'res/models/MeshRes5.obj',
-        }, continueStart);
-    }
-
-    window.loadedMeshes = {};
-    function continueStart(meshes) {
-        window.loadedMeshes = meshes;
+    function start()
+    {
         var canvas = document.getElementById("glcanvas")
         var gameScreen = new GameScreen();
-        var game = new Game(gameScreen, 1);
+        var loadingScreen = new LoadingScreen();
+        var game = new Game(loadingScreen, 1);
+        game.addScreen(gameScreen, 2);
         var application = new Application(game, 900, 800, canvas);
         application.performGameLoop();
     }
