rendering to a texture now works

--- a/src/framework/FrameworkInclude.html
+++ b/src/framework/FrameworkInclude.html
@@ -14,10 +14,14 @@
 <script src="src/graphics/buffers/FBO.js"></script>
 <script src="src/graphics/buffers/RBO.js"></script>
 <script src="src/graphics/buffers/Texture2D.js"></script>
+
 <script src="src/graphics/geometry/Geometry.js"></script>
 <script src="src/graphics/geometry/GeometryBuilder.js"></script>
 <script src="src/graphics/geometry/Mesh.js"></script>
 <script src="src/graphics/geometry/MeshFamily.js"></script>
+
+<script src="src/graphics/renderer/Renderer.js"></script>
+
 <script src="src/graphics/TextureLoader.js"></script>
 <script src="src/graphics/ShaderProgram.js"></script>
 <script src="src/graphics/Camera.js"></script>
